src/main/scala/chapter3/output/RunAccess.output
// #output
Access.scala:9: error: method turnTable in class Microwave cannot be
accessed in this.Microwave
microwave.turnTable() //ERROR
          ^
one error found
// #output
